--- a/src/typeset/main.css
+++ b/src/typeset/main.css
@@ -24,7 +24,7 @@ code {
 	font-size: 1.1em;
 }
 
-h1, h2 {
+h1, h2, h3 {
 	font-weight: normal;
 	font-family: 'Georgia',serif;
 }
@@ -33,7 +33,7 @@ h1 {
 	text-align: center;
 }
 
-h2 {
+h2, h3 {
 	margin-bottom: 0;
 }
 
@@ -56,4 +56,8 @@ p.subtitle {
 	text-align: center;
 	margin-top: -1.5em;
 	margin-bottom: 2em;
+}
+
+blockquote {
+	font-style: italic;
 }
